// Vitest Snapshot v1

exports[`Vite Plugin Web Extension > Configuration > should build additional inputs along side the rest of the manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually
  3. Building script2.ts indvidually

Building page1.html (1/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"script1\\"
rendering chunks...
../dist/script1.js   0.00 KiB / gzip: 0.02 KiB

Building script2.ts (3/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"script2\\"
rendering chunks...
../dist/script2.js   0.00 KiB / gzip: 0.02 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.22 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should not fail when emptyOutDir=false and the outDirExists=false 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually

Building page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should not fail when emptyOutDir=false and the outDirExists=true 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually

Building page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should not fail when emptyOutDir=true and the outDirExists=false 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually

Building page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should not fail when emptyOutDir=true and the outDirExists=true 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually

Building page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should respect the browser flags, removing fields other than chrome (defaults to chrome) 1`] = `
"Building for browser: chrome
vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually

Building page1.html (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"script1\\"
rendering chunks...
../dist/script1.js   0.00 KiB / gzip: 0.02 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.25 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should respect the browser flags, removing fields other than firefox (defaults to chrome) 1`] = `
"Building for browser: firefox
vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually

Building page1.html (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"script1\\"
rendering chunks...
../dist/script1.js   0.00 KiB / gzip: 0.02 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.26 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should respect the browser flags, removing fields other than undefined (defaults to chrome) 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually

Building page1.html (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"script1\\"
rendering chunks...
../dist/script1.js   0.00 KiB / gzip: 0.02 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.25 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should support supplementing the script build config via scriptViteConfig 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building dynamic-import.ts indvidually

Building page1.html (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building dynamic-import.ts (2/2)
vite v3.1.2 building for production...
transforming...
✓ 3 modules transformed.
rendering chunks...
../dist/dynamic-import.js   0.77 KiB / gzip: 0.50 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.23 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should work when the vite root is not specified 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building extension/page1.html indvidually

Building extension/page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"extension/page1\\"
rendering chunks...
dist/extension/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
dist/manifest.json   0.19 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should build a extension with both html pages and scripts 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually
  3. Building script2.ts indvidually

Building page1.html (1/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"script1\\"
rendering chunks...
../dist/script1.js   0.00 KiB / gzip: 0.02 KiB

Building script2.ts (3/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"script2\\"
rendering chunks...
../dist/script2.js   0.00 KiB / gzip: 0.02 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.23 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should build a simple background script extension 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building script1.js indvidually
  2. Building script2.ts indvidually

Building script1.js (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"script1\\"
rendering chunks...
../dist/script1.js   0.00 KiB / gzip: 0.02 KiB

Building script2.ts (2/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"script2\\"
rendering chunks...
../dist/script2.js   0.00 KiB / gzip: 0.02 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.19 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should build a simple popup extension 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually

Building page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;
